[gd_scene load_steps=2 format=3 uid="uid://bt6a74j36eu2r"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_m1orv"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_m1orv")

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="DealerScoreLabel" type="Label" parent="MainPanel/MainVBox"]
layout_mode = 2
text = "Dealer Score: 0"
horizontal_alignment = 1

[node name="DealerCardsContainer" type="HBoxContainer" parent="MainPanel/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="PlayerScoreLabel" type="Label" parent="MainPanel/MainVBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="PlayerCardsContainer" type="HBoxContainer" parent="MainPanel/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="MainPanel/MainVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="HitButton" type="Button" parent="MainPanel/MainVBox/ButtonsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Hit"

[node name="StandButton" type="Button" parent="MainPanel/MainVBox/ButtonsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Stand"

[node name="ResetButton" type="Button" parent="MainPanel/MainVBox/ButtonsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Reset"

[node name="ResultLabel" type="Label" parent="MainPanel/MainVBox"]
layout_mode = 2

[connection signal="pressed" from="MainPanel/MainVBox/ButtonsContainer/ResetButton" to="GameManager" method="_on_reset_button_pressed"]
